# shadowstrike

./: .gitignore  Cargo.toml  DEPLOY.md  Dockerfile.relay  README.md  fly.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: animation.rs  audio.rs  input_handler.rs  lib.rs  networking.rs  particles.rs  renderer.rs
crates/game_sim/: Cargo.toml
crates/game_sim/benches/: sim_bench.rs
crates/game_sim/src/: collision.rs  combo.rs  constants.rs  fixed.rs  input.rs  lib.rs  player.rs  ring_buffer.rs
crates/game_sim/tests/: fuzz_tests.rs  integration.rs  metrics_tests.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs  main.rs  protocol.rs  room.rs  server.rs
crates/relay/tests/: integration.rs
src/: animation.rs  collision.rs  fixed_point.rs  game_state.rs  input.rs  lib.rs  rollback.rs  simulation.rs
web/: index.html
