[package]
name = "shadowstrike"
version = "0.1.0"
edition = "2024"
description = "ShadowStrike — a browser-based 2D fighting game with rollback netcode"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
