[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
rand = "0.8"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["connect"] }
